--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
       </nav>
     </header>
-    <div class="gallery js-flickity" data-flickity-options='{"wrapAround": true, "autoPlay": true, "resize": true, "draggable": false}'>
+    <div class="gallery js-flickity" data-flickity-options='{"wrapAround": true, "autoPlay": true, "resize": true, "draggable": true}'>
       <div class="gallery-cell">
         <div class="logo-front">
           <img src="images/Logo_The_London_Ginger.png" alt="logo" />
