--- a/blog1.html
+++ b/blog1.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript">var switchTo5x=true;</script>
+    <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+    <script type="text/javascript">stLight.options({publisher: "6020341c-443b-4c8b-8dce-42afab6cf74f", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
   </head>
   <body>
     <header>
@@ -70,7 +73,16 @@
          The entrance to Kenwood House is free. For more information <a href="http://www.english-heritage.org.uk/visit/places/kenwood/" class="out-links">read here</a>.
        </p>
      </article>
-
+   </div>
+   <div class="social-share-title">
+     <h3>Share:</h3>
+   </div>
+   <div class="social-share">
+     <span class='st_facebook_large'></span>
+     <span class='st_twitter_large'></span>
+     <span class='st_linkedin_large'></span>
+     <span class='st_pinterest_large'></span>
+     <span class='st_email_large'></span>
    </div>
    <footer>
      <div class="follow">
